further minor fix

--- a/theme/templates/generic/includes/rating.html
+++ b/theme/templates/generic/includes/rating.html
@@ -9,7 +9,7 @@
                 You&nbsp;
             {% endif %}
         {% else %}
-            {{ rating_sum }} others
+            {{ rating_sum }} others&nbsp;
         {% endif %}
     {% else %}
         Be the first one to&nbsp;
