--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -746,6 +746,12 @@ li.account p{
     -webkit-transition: color 0.3s;
     -moz-transition: color 0.3s;
 }
+
+.errorlist {
+	background: rgb(255, 200, 200);
+	border: 1px solid rgb(255, 150, 150)
+}
+
 /* ===== Registration form popover ===== */
 
 .signup .popover {
