--- a/theme/templates/generic/includes/rating.html
+++ b/theme/templates/generic/includes/rating.html
@@ -4,12 +4,12 @@
     {% if rating_sum %}
         {% if you_rated %}
             {% if rating_sum > 1 %}
-                You and {{ rating_sum|add:-1 }}  others&nbsp;
+                You and {{ rating_sum|add:-1 }}  others +1 this. &nbsp;
             {% else %}
-                You&nbsp;
+                You +1 this. &nbsp;
             {% endif %}
         {% else %}
-            {{ rating_sum }} others&nbsp;
+            {{ rating_sum }} others +1 this. &nbsp;
         {% endif %}
     {% else %}
         Be the first one to&nbsp;
@@ -27,6 +27,8 @@
         <input value="1" name="value" type="hidden"/>
         <input type="submit" class="btn btn-default btn-sm" value={% if you_rated %} "Withdraw +1" {% else %} "+1" {% endif %}/>
         </form>
-        &nbsp;this.
+        {% if not rating_sum %}
+            &nbsp;this.
+        {% endif %}
     {% endif %}
 </span>
